# ChangeLog for dev-java/ibm-jre-bin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.161 2011/01/25 12:37:47 fauli Exp $

  25 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  ibm-jre-bin-1.5.0.12_p3.ebuild:
  stable x86, security bug 352603

  25 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  ibm-jre-bin-1.6.0.9.ebuild:
  stable x86, security bug 352603

  25 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  ibm-jre-bin-1.5.0.12_p3.ebuild, ibm-jre-bin-1.6.0.9.ebuild:
  Stable on amd64 wrt bug #352603

  24 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ibm-jre-bin-1.5.0.12_p3.ebuild, ibm-jre-bin-1.6.0.9.ebuild:
  ppc/ppc64 stable wrt #352603

*ibm-jre-bin-1.6.0.9 (24 Jan 2011)
*ibm-jre-bin-1.5.0.12_p3 (24 Jan 2011)

  24 Jan 2011; Vlastimil Babka <caster@gentoo.org>
  +ibm-jre-bin-1.5.0.12_p3.ebuild, +ibm-jre-bin-1.6.0.9.ebuild:
  Version bump, security bug #352603.

  01 Nov 2010; Vlastimil Babka <caster@gentoo.org>
  -ibm-jre-bin-1.5.0.11.ebuild, -ibm-jre-bin-1.5.0.11_p1.ebuild,
  -ibm-jre-bin-1.6.0.7.ebuild, -ibm-jre-bin-1.6.0.8.ebuild:
  Remove old.

  05 Oct 2010; Markus Meier <maekke@gentoo.org>
  ibm-jre-bin-1.5.0.12_p1.ebuild, ibm-jre-bin-1.6.0.8_p1.ebuild:
  x86 stable, bug #330663

  28 Sep 2010; Brent Baude <ranger@gentoo.org>
  ibm-jre-bin-1.5.0.12_p1.ebuild, ibm-jre-bin-1.6.0.8_p1.ebuild:
  Marking -1.6.0.8_p1 and -1.5.0.12_p1 ppc64/ppc for bug 330663

  26 Sep 2010; Markos Chandras <hwoarang@gentoo.org>
  ibm-jre-bin-1.5.0.12_p1.ebuild, ibm-jre-bin-1.6.0.8_p1.ebuild:
  Stable on amd64 wrt bug #330663

*ibm-jre-bin-1.6.0.8_p1 (26 Sep 2010)
*ibm-jre-bin-1.5.0.12_p1 (26 Sep 2010)

  26 Sep 2010; Vlastimil Babka <caster@gentoo.org>
  +ibm-jre-bin-1.5.0.12_p1.ebuild, +ibm-jre-bin-1.6.0.8_p1.ebuild:
  Version bump, security bug #330663.

*ibm-jre-bin-1.6.0.8 (14 May 2010)

  14 May 2010; Vlastimil Babka <caster@gentoo.org>
  +ibm-jre-bin-1.6.0.8.ebuild: