@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/ibm-jre-bin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.161 2011/01/25 12:37:47 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.162 2011/03/25 15:17:17 caster Exp $
+
+*ibm-jre-bin-1.6.0.9_p1 (25 Mar 2011)
+
+  25 Mar 2011; Vlastimil Babka <caster@gentoo.org>
+  -ibm-jre-bin-1.6.0.8_p1.ebuild, +ibm-jre-bin-1.6.0.9_p1.ebuild:
+  Version bump, security bug #360431.
 
   25 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
   ibm-jre-bin-1.5.0.12_p3.ebuild:
